# pdp-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deploy/: DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  pdp-mcp-server.service  setup-server.sh
scripts/: convert_ppk.py  convert_ppk_to_openssh.py  extract_pdf.py  ingest_data.py  test_retrieval.py
src/: __init__.py  server.py
src/rag/: __init__.py  embeddings.py  pinecone_client.py  retriever.py
src/tools/: __init__.py  pdp_tools.py
tests/: __init__.py  test_retriever.py  test_server.py  test_tools.py
